<resources>
    <string name="app_name">CookingPatterns</string>
    <string name="title_activity_search">Search Recipe</string>
    <string name="title_activity_edit_recipe">Edit Recipe</string>
    <string name="ingredient">Ingredient</string>
    <string name="preparation">Preparation</string>
    <string name="category">Category:</string>
    <string name="time">Time:</string>
    <string name="rating">Rating:</string>
    <string name="portions">Portions:</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
