<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.cookingpatterns.EditRecipe"
    android:orientation="vertical">

    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5sp"
                android:paddingRight="5sp"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold|italic"
                android:text=""
                android:id="@+id/recipename" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2sp"
                    android:paddingBottom="2sp"
                    android:paddingLeft="10sp"
                    android:paddingRight="5sp"
                    android:layout_gravity="left">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="2sp"
                        android:paddingBottom="2sp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/category"
                        android:layout_gravity="right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="2sp"
                        android:paddingBottom="2sp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/time"
                        android:layout_gravity="right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="2sp"
                        android:paddingBottom="2sp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/rating"
                        android:layout_gravity="right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="2sp"
                        android:paddingBottom="2sp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/portions"
                        android:layout_gravity="right" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="2sp"
                    android:paddingBottom="2sp"
                    android:paddingLeft="5sp"
                    android:layout_gravity="right">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="2sp"
                        android:paddingBottom="2sp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text=""
                        android:id="@+id/category"
                        android:layout_gravity="left" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="2sp"
                        android:paddingBottom="2sp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text=""
                        android:id="@+id/time"
                        android:layout_gravity="left" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="2sp"
                        android:paddingBottom="2sp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text=""
                        android:id="@+id/rating"
                        android:layout_gravity="left" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="2sp"
                        android:paddingBottom="2sp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text=""
                        android:inputType="numberDecimal"
                        android:id="@+id/portion"
                        android:layout_gravity="left" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="125sp"
            android:layout_height="125sp"
            android:id="@+id/picture"
            android:layout_gravity="right|top" />


    </FrameLayout>

    <View style="@style/Separator"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="italic"
            android:text="@string/ingredient" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listofingredients" >

            <org.cookingpatterns.EditIngredientsView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:EIUnit=""
                app:EIName=""/>

        </LinearLayout>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/addingredient"
            android:layout_gravity="bottom|right"
            android:background="@android:drawable/ic_input_add"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_marginBottom="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginTop="1sp"
            android:layout_marginLeft="1sp" />

    </LinearLayout>

    <View style="@style/Separator"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="italic"
            android:text="@string/preparation" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/preparation"
            android:background="@drawable/border" />
    </LinearLayout>

</LinearLayout>
