<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.cookingpatterns.View.DisplayRecipeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="4"
                android:rowCount="5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_columnSpan="3"
                    android:layout_row="0"
                    android:paddingLeft="5sp"
                    android:paddingRight="5sp"
                    android:paddingTop="5sp"
                    android:paddingBottom="5sp"
                    android:layout_gravity="fill_horizontal"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold|italic"
                    android:text=""
                    android:id="@+id/recipename" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:paddingTop="2sp"
                    android:paddingBottom="2sp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/category"
                    android:layout_gravity="right" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:paddingTop="2sp"
                    android:paddingBottom="2sp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/time"
                    android:layout_gravity="right" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="3"
                    android:paddingTop="2sp"
                    android:paddingBottom="2dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/rating"
                    android:layout_gravity="right" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="4"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/portions"
                    android:layout_gravity="right" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_row="1"/>
                <Space
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_row="2"/>
                <Space
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_row="3"/>
                <Space
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_row="4"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_row="1"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/category"
                    android:layout_gravity="fill_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_row="2"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/time"
                    android:layout_gravity="fill_horizontal" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_row="3"
                    android:layout_gravity="fill"
                    android:id="@+id/rating"
                    style="@style/smallRatingBar"
                    android:numStars="5"
                    android:stepSize="1"
                    android:isIndicator="true"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_row="4"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:inputType="numberDecimal"
                    android:id="@+id/portion"
                    android:layout_gravity="fill_horizontal"
                    android:background="@drawable/border"/>

                <ImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_column="3"
                    android:layout_row="0"
                    android:layout_rowSpan="5"
                    android:foreground="@drawable/border"
                    android:background="@android:drawable/ic_menu_gallery"
                    android:id="@+id/picture"
                    android:layout_gravity="right|top" />

            </GridLayout>

            <View style="@style/Separator"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="italic"
                    android:text="@string/ingredient" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/listofingredients" >

                </LinearLayout>


            </LinearLayout>

            <View style="@style/Separator"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5sp"
                    android:paddingRight="5sp"
                    android:paddingTop="5sp"
                    android:paddingBottom="5sp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="italic"
                    android:text="@string/preparation" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="Für die Eierspeis die Eier in eine Schüssel schlagen und mit Salz sowie Pfeffer würzen. Mit einer Gabel verschlagen.In einer Pfanne geben."
                    android:id="@+id/preparation"
                    android:background="@drawable/border"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
