<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.cookingpatterns.View.EditRecipeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="5">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_row="0"
                    android:paddingLeft="5sp"
                    android:paddingRight="5sp"
                    android:paddingTop="5sp"
                    android:paddingBottom="5sp"
                    android:layout_gravity="fill_horizontal"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold|italic"
                    android:text=""
                    android:id="@+id/recipename"
                    android:background="@drawable/border"
                    android:singleLine="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:paddingTop="2sp"
                    android:paddingBottom="2sp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/category"
                    android:layout_gravity="right" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:paddingTop="2sp"
                    android:paddingBottom="2sp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/time"
                    android:layout_gravity="right" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="3"
                    android:paddingTop="2sp"
                    android:paddingBottom="2sp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/rating"
                    android:layout_gravity="right" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="4"
                    android:paddingTop="2sp"
                    android:paddingBottom="2sp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/portions"
                    android:layout_gravity="right" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:paddingTop="2sp"
                    android:paddingBottom="2sp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/category"
                    android:layout_gravity="fill_horizontal"
                    android:background="@drawable/border"
                    android:singleLine="true"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:paddingTop="2sp"
                    android:paddingBottom="2sp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/time"
                    android:layout_gravity="fill_horizontal"
                    android:inputType="time"
                    android:background="@drawable/border"/>

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="3"
                    android:layout_gravity="center_vertical|left"
                    android:id="@+id/rating"
                    style="@style/smallRatingBar"
                    android:numStars="5"
                    android:stepSize="1" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="4"
                    android:paddingTop="2sp"
                    android:paddingBottom="2sp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:inputType="numberDecimal"
                    android:id="@+id/portion"
                    android:layout_gravity="fill_horizontal"
                    android:background="@drawable/border"
                    android:singleLine="true"/>

                <ImageView
                    android:layout_width="125sp"
                    android:layout_height="125sp"
                    android:layout_column="2"
                    android:layout_row="0"
                    android:layout_rowSpan="5"
                    android:background="@android:drawable/ic_menu_gallery"
                    android:foreground="@drawable/border"
                    android:id="@+id/picture"
                    android:layout_gravity="right|top"
                    android:clickable="true" />

            </GridLayout>

            <View style="@style/Separator"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5sp"
                    android:paddingRight="5sp"
                    android:paddingTop="5sp"
                    android:paddingBottom="5sp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="italic"
                    android:text="@string/ingredient" />

                <org.cookingpatterns.UtilsAndExtentions.ExpandedListView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fastScrollEnabled="false"
                    android:footerDividersEnabled="false"
                    android:headerDividersEnabled="false"
                    android:divider="#00ffffff"
                    android:dividerHeight="0dp"
                    android:scrollbars="horizontal"
                    android:id="@+id/listofingredients">

                </org.cookingpatterns.UtilsAndExtentions.ExpandedListView>

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/addingredient"
                    android:layout_gravity="bottom|end"
                    android:background="@android:drawable/ic_input_add"
                    android:scaleType="centerInside"
                    android:layout_marginBottom="5sp"
                    android:layout_marginRight="5sp"
                    android:backgroundTint="@color/colorPrimary" />

            </LinearLayout>

            <View style="@style/Separator"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="1"
                android:rowCount="2"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:paddingLeft="5sp"
                    android:paddingRight="5sp"
                    android:paddingTop="5sp"
                    android:paddingBottom="5sp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="italic"
                    android:text="@string/preparation" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/preparation"
                    android:layout_gravity="fill_horizontal"
                    android:background="@drawable/border"/>

            </GridLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_menu_save"
        app:backgroundTint="@color/colorAccent" />

</FrameLayout>
